src/objects/MUSW__RESTSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MUSW__Admin_Email__c</fullName>
        <description>Recipient of notifications and errors</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Recipient of notifications and errors</inlineHelpText>
        <label>Admin Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Batch_Size_Limit__c</fullName>
        <description>Maximum number of results returned for each ArcGIS Layer query within a sync batch. Must be &lt;= 10,000 and &lt;= to MaxRecordCount on the ArGIS Layer (whichever is less).  If no value is provided, only one query will run and will only return up to 10,000 records only.</description>
        <inlineHelpText>Applies only if running ArcGIS 10.3+. Must be &lt;= 10,000 and &lt;= to MaxRecordCount on ArGIS Layer (whichever is less). If set, allows multiple queries to run as part of a single batch. If not set, only 1 query will run, &amp; will return max 10,000 records.</inlineHelpText>
        <label>Batch Size Limit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Batch_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Database_Operation__c</fullName>
        <description>Insert, Update, or Upsert</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Allowed values: Insert, Update, Upsert</inlineHelpText>
        <label>Database Operation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Expiration__c</fullName>
        <description>Expiration in minutes</description>
        <inlineHelpText>Expiration in minutes</inlineHelpText>
        <label>Expiration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Field_Map__c</fullName>
        <description>The expected BasicGov name to (:) the external REST Service parameter name. e.g. city:City, street:Address, ... The current supported fields are street, city, state, country, and zip.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The expected BasicGov field name to (:) the external REST Service parameter name. Multiple mappings are separated by a comma. e.g. city:City, street:Address, ... The current supported fields are street, city, state, country, and zip.</inlineHelpText>
        <label>Request Field Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__GIS_Authentication_Class__c</fullName>
        <defaultValue>&apos;MUSW.GISAuthentication&apos;</defaultValue>
        <description>Class name for GIS Authentication Interface implementation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GIS Authentication Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ID_Field__c</fullName>
        <description>REST Service unique ID field (e.g. OBJECTID)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>REST Service unique ID field (e.g. OBJECTID)</inlineHelpText>
        <label>Request ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ID_Map__c</fullName>
        <description>The expected BasicGov name to (:) the external REST Service parameter name. e.g. MUSW__Parcel_Number2__c:APN.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The expected BasicGov name to (:) the external REST Service parameter name. e.g. MUSW__Parcel_Number2__c:APN. The parameter has to be already defined in Traverse Instructions.</inlineHelpText>
        <label>Request ID Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Last_Run_DateTime__c</fullName>
        <description>Date reference for queries</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Defines a date reference for queries. Unless manually changed by user this is the last run date</inlineHelpText>
        <label>Benchmark Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Last_Run_Date_Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Last Run Date Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Method_Type__c</fullName>
        <defaultValue>&quot;GET&quot;</defaultValue>
        <description>Type of method to get the token for GIS Server (local hosted)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Type of method to get the token for GIS Server (local hosted)</inlineHelpText>
        <label>Method Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Password__c</fullName>
        <description>AES-128 encrypted password</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Pull_Condition__c</fullName>
        <description>The condition for Pull requests. This would be the SQL where-clause for Pull operation</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Example: TYPE = &apos;Test&apos; and STATUS = &apos;Open&apos;</inlineHelpText>
        <label>Pull Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Push_Condition__c</fullName>
        <description>The condition for Pull requests. This would be the SQL where-clause for Pull operation</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Example: MUSW__Status__c = &apos;Open&apos;</inlineHelpText>
        <label>Push Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Sync_Operation__c</fullName>
        <description>This field is only used by Sync applications (e.g. GIS Sync)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Allowed values: Push Only, Pull Only, Push then Pull, Pull then Push. This field is only used by Sync applications</inlineHelpText>
        <label>Sync Operation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Traverse_Instructions__c</fullName>
        <description>A Traverse Instruction contains key names to JSON paths. e.g. x$candidates[*].location.x. Multiple Instructions are separated using a semi-colon. Refer to the Wiki for details.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A Traverse Instruction contains key names to JSON paths. e.g. x$candidates[*].location.x. Multiple Instructions are separated using a semi-colon. Refer to the Wiki for details.</inlineHelpText>
        <label>Response Traverse Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__URL__c</fullName>
        <description>The URL for the REST Server. Important: You need to use https whenever possible, especially if the service is protected (eg. token-based).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The URL for the REST Server. Important: You need to use https whenever possible, especially if the service is protected (eg. token-based).</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MUSW__Update_Nulls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Null Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Username__c</fullName>
        <description>AES-128 encrypted username</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>REST Settings</label>
    <listViews>
        <fullName>MUSW__All_Details</fullName>
        <columns>NAME</columns>
        <columns>MUSW__URL__c</columns>
        <columns>MUSW__Last_Run_DateTime__c</columns>
        <columns>MUSW__isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <language>en_US</language>
    </listViews>
</CustomObject>